[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifiers-rlm"
version = "0.1.0"
description = "Extensions for the verifiers RLM environment — recursion depth and learned context compression"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Andy Liu" },
]
keywords = ["rlm", "recursive-language-model", "verifiers", "reinforcement-learning", "llm", "context-compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "verifiers>=0.1.9",
    "datasets",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/ascl1u/verifiers-rlm"
Issues = "https://github.com/ascl1u/verifiers-rlm/issues"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
